# si4pipeline

./: .gitignore  Option1.py  Option1_oc.py  Option1_parametric.py  Option1_parametric_2.py  Option1_parametric_3.py  README.md  baseexp.sh  common_func.py  compute_pivot.py  cross_validate.ipynb  cvexp.sh  cvfpr.sh  del.sh  demonstration.ipynb  execute.sh  exp.sh  exp_fpr.sh  exp_fpr_oc.sh  exp_tpr.sh  exp_tpr_oc.sh  feature_selection.py  feature_selection_si.py  feature_selection_si_2.py  fpr.sh  hoge.ipynb  interface.ipynb  interface.py  missing_imputation.py  module.ipynb  module_2.ipynb  module_3.ipynb  module_si.ipynb  outlier_removal.py  outlier_removal_si.py  outlier_removal_si_2.py  plot_paper.ipynb  plot_real.ipynb  plot_robust.ipynb  plot_synthe.ipynb  (+16 more)
class/: common_func.py  common_func_before.py  compute_pivot.py  feature_selection.py  missing_imputation.py  option1_for.py  option2_class.py  outlier_removal.py
experiment/: __init__.py  _prepro_realdata.ipynb  base_experiment.py  basic.py  cv_experiment.py  ds_experiment.py  experiment_main.py  experiment_real.py  experiment_robust.py  experiment_time.py  main_experiment.py  managers.py  summary.py  utils.py
real/: exp_real.sh  process.ipynb  real_experiment.py  table_dataset.pkl
robust/: exp_robust_estimated.sh  exp_robust_nongauss.sh  robust_experiment_estimated.py  robust_experiment_nongauss.py
shell/: execute.sh  exp_estimated.sh  exp_fpr.sh  exp_non_gaussian.sh  exp_real.sh  exp_robust.sh  exp_time.sh  exp_tpr.sh  f06.sh  f07.sh  f08.sh  f09.sh  f10.sh  flush.sh  qdel.sh  qdel_all.sh  summary.sh  test.sh
si4automl/: __init__.py  abstract.py  base_component.py  constructor.py  feature_selection old.py  feature_selection.py  missing_imputation.py  model.py  outlier_detection.py  pipeline.py  utils.py
si4pipeline/: __init__.py  constructor.py  pipeline.py
(+16 files in other folders)
